2008-08-18  Sergey Poznyakoff  <gray@gnu.org.ua>

	* doc/rfc/Makefile.am (EXTRA_DIST): Add new rfcs.
	* doc/rfc/rfc1413.txt, doc/rfc/rfc2087.txt, doc/rfc/rfc2180.txt,
	doc/rfc/rfc2683.txt, doc/rfc/rfc3348.txt,
	doc/rfc/rfc4314.txt: New files. 

2008-08-17  Sergey Poznyakoff  <gray@gnu.org.ua>

	Bugfix.
	* lib/tcpwrap.c (mu_tcp_wrapper_cb_hosts_deny_syslog):
	(mu_tcp_wrapper_cb_hosts_allow_syslog): Use syslog priorities,
	not facilities.
	(tcpwrapper_param): Rename allow-syslog-level and
	deny-syslog-level to allow-syslog-priority and
	deny-syslog-priority, correspondingly.	

	Version 1.9.92.

	* imap4d/list.c (imap4d_list): Fix addslash condition.

	Improve folder listing.
	* include/mailutils/registrar.h (_mu_record): New method
	`_list_p'.
	(mu_record_list_p): New function.
	* libproto/include/amd.h (MU_AMD_SIZE_FILE_NAME): New define.
	* libproto/maildir/folder.c (_maildir_is_scheme): Return
	MU_FOLDER_ATTRIBUTE_FILE|MU_FOLDER_ATTRIBUTE_DIRECTORY, on
	success.
	Implement _list_p method.
	* libproto/mbox/folder.c (list_helper): Change semantics of the
	2nd argument.  The record is used to determine whether or not
	to list a particular file.
	* libproto/mh/folder.c: Implement _list_p method.
	* mailbox/amd.c (SIZE_FILE_NAME): Replace with
	MU_AMD_SIZE_FILE_NAME from amd.h.
	* mailbox/registrar.c (mu_record_list_p): New function.
	
	Bugfix.
	* libproto/maildir/mbox.c (info_to_flags): Fix return value.

	Implement UNSELECT extension.
	* doc/rfc/Makefile.am: Add rfc3691.txt
	* doc/rfc/rfc3691.txt: New file.
	* imap4d/capability.c: Announce UNSELECT capability.
	* imap4d/close.c: Implement UNSELECT command.
	* imap4d/commands.c: Add UNSELECT command.
	* imap4d/imap4d.h (imap4d_unselect): New proto.
	* imap4d/testsuite/imap4d/anystate.exp: Reflect UNSELECT
	capability.
	* imap4d/testsuite/imap4d/examine.exp: Reflect yesterday's changes
	to STATUS output.

2008-08-16  Sergey Poznyakoff  <gray@gnu.org.ua>

	* imap4d/status.c (imap4d_status): Remove extra whitespace 